--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,11 @@ header h1 {
   font-size: 3rem;
   margin:0;
 }
+h2{
+  text-align: center;
+  margin: 1rem 0;
+  font-family: 'Inter', sans-serif;
+}
 .dos-columnas {
   display: grid;
   gap: 4rem;
@@ -33,7 +38,7 @@ main {
   margin: 0 auto 2rem auto;
   border-radius: .5rem;
   background-color: white;
-  padding: 4rem;
+  padding: 2rem;
   -webkit-box-shadow: 0px 10px 33px -17px rgba(173,173,173,1);
   -moz-box-shadow: 0px 10px 33px -17px rgba(173,173,173,1);
   box-shadow: 0px 10px 33px -17px rgba(173,173,173,1);
@@ -89,4 +94,28 @@ form {
   justify-content: center;
   align-items: center;
   width: 100%;
+}
+
+.clima{
+
+}
+.clima > p:first-of-type{
+  font-size: 4rem;
+  font-family: 'Inter', sans-serif;
+  margin-top: 2rem;
+}
+.clima p{
+  text-align: center;
+  margin: 0;
+  font-weight: 700;
+}
+.clima p span{
+  font-size: 1rem;
+  vertical-align: super;
+}
+.temp_min_max{
+  margin-top: 2rem;
+  display: flex;
+  justify-content: center;
+  gap: 4rem;
 }
